fixed validation errors and firefox error on the height on the input box because it was hidden in that browser

--- a/css/popup.css
+++ b/css/popup.css
@@ -63,7 +63,7 @@
   /*    right:5px;  
   top:5px;  */
   position: relative;
-  bottom:0.75;  
+  bottom:0.75em;  
   /*color:#6fa5e2;  */
   color:#00ADEF;
   font-weight:500;
